# opencat

./: .env.example  .gitignore  AGENT_SETUP.md  Cargo.toml  Dockerfile  docker-compose.yml
crates/server/: Cargo.toml
crates/server/config/: default.toml
crates/server/migrations/: 001_initial_schema.sql  002_product_metadata.sql
crates/server/src/: cli.rs  config.rs  db.rs  lib.rs  main.rs
crates/server/src/api/: apps.rs  auth.rs  entitlements.rs  events.rs  health.rs  mod.rs  notifications.rs  offerings.rs  products.rs  receipts.rs  subscribers.rs  webhooks.rs
crates/server/src/models/: app.rs  entitlement.rs  event.rs  mod.rs  product.rs  subscriber.rs  transaction.rs
crates/server/src/store/: apple.rs  apple_connect.rs  google.rs  mod.rs  types.rs
crates/server/src/webhooks/: delivery.rs
dashboard/src/app/: layout.tsx  page.tsx
dashboard/src/components/: sidebar.tsx
dashboard/src/lib/: api.ts  theme.ts
docs/plans/: 2026-01-31-opencat-design.md  2026-01-31-opencat-implementation-plan.md  2026-01-31-opencat-sdks-design.md  2026-02-01-apple-store-connect-integration.md
ios-app/: .gitignore  CLAUDE.md  GUESTS_IMPLEMENTATION.md  README.md  temp_new_keys.json
ios-app/.claude/agents/: build-fixer.md  firebase-expert.md  flutter-translator.md  swift-reviewer.md  swiftui-designer.md  system-architect.md
ios-app/RushDay/: RushDay.entitlements
ios-app/RushDay.xcodeproj/: project.pbxproj  project.pbxproj.backup
ios-app/RushDay/App/: AppState.swift  ContentView.swift  RushDayApp.swift
ios-app/RushDay/Resources/: GoogleService-Info-Dev.plist  GoogleService-Info.plist  Info.plist  LaunchScreen.storyboard  Localizable.xcstrings  Products.storekit
ios-app/RushDayTests/: AIEventPlannerFlowIntegrationTests.swift  AIEventPlannerViewModelTests.swift  AppStateAIPlannerTests.swift
ios-app/RushDayTests/Notifications/: NotificationHandlerTests.swift  NotificationHelpersTests.swift  NotificationRepositoryTests.swift  NotificationTypesTests.swift
ios-app/RushDayUITests/: NotificationFlowUITests.swift
ios-app/ci_scripts/: ci_post_clone.sh  ci_post_xcodebuild.sh  ci_pre_xcodebuild.sh
scripts/: install.sh  integration-test.sh
sdks/flutter/: PROMPT.md  SPEC.md  pubspec.yaml
sdks/flutter/lib/: opencat.dart
sdks/go/: go.mod  models.go  opencat.go  opencat_test.go
sdks/kotlin/: PROMPT.md  SPEC.md  build.gradle.kts
sdks/node/: package-lock.json  package.json
sdks/node/src/: client.ts  index.ts  types.ts
sdks/python/: pyproject.toml
sdks/python/opencat/: __init__.py  client.py  models.py
sdks/python/opencat.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sdks/python/tests/: test_client.py
(+265 files in other folders)
