[package]
name = "opencat-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
sqlx = { workspace = true, features = ["postgres", "sqlite", "migrate"] }
serde.workspace = true
serde_json.workspace = true
jsonwebtoken.workspace = true
reqwest.workspace = true
config.workspace = true
secrecy.workspace = true
dotenvy.workspace = true
chrono.workspace = true
uuid.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
sha2 = "0.10"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.5"
