[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "opencat"
version = "0.1.0"
description = "Python SDK for OpenCat server"
requires-python = ">=3.9"
dependencies = ["httpx>=0.24"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "respx>=0.20"]
